# memories

./: .gitignore  README.md  meson.build  org.quasars.memories.json
data/: meson.build  org.quasars.memories.desktop.in  org.quasars.memories.gschema.xml  org.quasars.memories.metainfo.xml.in  org.quasars.memories.service.in
data/icons/: meson.build
data/icons/hicolor/: index.theme
po/: POTFILES.in  meson.build
src/: main.py  memo_loader.py  memories.gresource.xml  memories.in  memos_api.py  meson.build  settings.py  style.css  window.py  window.ui
src/api/: memos_api.py
src/ui/: connection_view.py  memo_detail_view.py  memo_edit_view.py  memo_heatmap.py  memo_loader.py  memo_row.py  memos_view.py  new_memo_dialog.py  preferences.py  search_handler.py  view_base.py
src/utils/: connection_handler.py  markdown.py  settings.py
